# llmlib

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  setup.py  test1.py  test2.py  test__local_index.py  test_completion.py  test_completion_hf.py  test_completion_openai.py  test_huggingface_local_index.py  test_local_index.py  test_local_index_hf.py  test_openai_local_index.py
examples/: basic_completion.py  embeddings_search.py  fireworks_chat.py  gemini_search.py  ollama_chat.py
llmlib/: README.md  __init__.py  base_model_wrapper.py  embedding_store.py  fastchat.py  fireworks_provider.py  gemini_provider.py  huffingface.py  huggingface.py  huggingface_provider.py  llmlib.py  ollama_provider.py  openai.py  openai_provider.py  utils.py
tests/: test_llmlib.py  test_new_providers.py
