[project]
name = "llmlib_mark-watson"
version = "0.0.1"
authors = [
  { name="Mark Watson", email="markw@markwatson.com" },
]
description = "Portability lib for OpenAI, Hugging Face, and FastChat local model APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mark-watson/llmlib"
"Bug Tracker" = "https://github.com/mark-watson/llmlib/issues"